CSS Bug Fixes - 04/01/2014
We fixed some bugs in the CSS

--- a/css/default.css
+++ b/css/default.css
@@ -111,6 +111,10 @@ iframe {
 	padding: 0;
 }
 
+#sidebar ul.navigation {
+	border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+}
+
 #sidebar li {
 	display: block;
 	list-style: none;
