--- a/css/default.css
+++ b/css/default.css
@@ -161,3 +161,23 @@ iframe {
 #about {
 	text-align: center;
 }
+.tab-content img, .icons_table img {
+	padding: 7px;
+	border-radius: 4px;
+	border: 1px solid #dddddd;
+	background: #f5f5f5;
+	background: -moz-linear-gradient(top,  #fcfcfc 0%, #f5f5f5 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fcfcfc), color-stop(100%,#f5f5f5));
+	background: -webkit-linear-gradient(top,  #fcfcfc 0%,#f5f5f5 100%);
+	background: -o-linear-gradient(top,  #fcfcfc 0%,#f5f5f5 100%);
+	background: -ms-linear-gradient(top,  #fcfcfc 0%,#f5f5f5 100%);
+	background: linear-gradient(to bottom,  #fcfcfc 0%,#f5f5f5 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#f5f5f5',GradientType=0 );
+	width: 64px !important;
+	height: 64px !important;
+	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+.mainbody table {
+	border: 0 !important;
+}
