--- a/css/default.css
+++ b/css/default.css
@@ -173,11 +173,8 @@ iframe {
 	background: -ms-linear-gradient(top,  #fcfcfc 0%,#f5f5f5 100%);
 	background: linear-gradient(to bottom,  #fcfcfc 0%,#f5f5f5 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#f5f5f5',GradientType=0 );
-	width: 64px !important;
-	height: 64px !important;
+	width: 64px;
+	height: 64px;
 	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-.mainbody table {
-	border: 0 !important;
 }
