--- a/css/default.css
+++ b/css/default.css
@@ -178,3 +178,77 @@ iframe {
 	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
+.table-rounded {
+	border-collapse: separate;
+	border: 1px solid #ddd;
+    border-radius: 4px;
+    border-left: 0px;
+	border-top: 0px;
+}
+.table-rounded > thead:first-child > tr:first-child > th {
+    border-bottom: 0px;
+    border-top: 1px solid #ddd;
+}
+.table-rounded td, .table-rounded th {
+    border-left: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+}
+.table-rounded > :first-child > :first-child > :first-child {
+    border-top-left-radius: 4px;
+}
+.table-rounded > :first-child > :first-child > :last-child {
+    border-top-right-radius: 4px;
+}
+.table-rounded > :last-child > :last-child > :first-child {
+    border-bottom-left-radius: 4px;
+}
+.table-rounded > :last-child > :last-child > :last-child {
+    border-bottom-right-radius: 4px;
+}
+.checkbox{
+	padding-left: 0;
+	font-weight: normal;
+	margin: 0;
+	display: inline-block;
+}
+
+input[type='checkbox'] {
+	position: absolute;
+	clip: rect(1px, 1px, 1px, 1px);
+}
+
+input[type='checkbox'] + label > i:before{
+	content: "\f096";
+}
+
+input[type='checkbox']:checked + label > i:before{
+	content: "\f046";
+}
+
+input[type='checkbox'] + label > i{
+	text-align: left;
+	width: 1.0em;
+}
+.radio{
+	padding-left: 0;
+	font-weight: normal;
+	margin: 0;
+	display: inline-block;
+}
+input[type='radio'] {
+	position: absolute;
+	clip: rect(1px, 1px, 1px, 1px);
+}
+
+input[type='radio'] + label > i:before{
+	content: "\f10c";
+}
+
+input[type='radio']:checked + label > i:before{
+	content: "\f192";
+}
+
+input[type='radio'] + label > i{
+	text-align: left;
+	width: 1.0em;
+}
