--- a/unauthenticated/css/login.css
+++ b/unauthenticated/css/login.css
@@ -7,31 +7,31 @@
 	border:0 !important;
 }
 /* ---------- Login ---------- */
-body{
-	padding-top: 40px;
-	padding-bottom: 40px;
-	background-color: #4E5055;
+
+.btn {
+	width: 46%;
 }
 
 .form-signin {
-	max-width: 330px;
-	padding: 15px;
-	margin: 0 auto;
-	border: 1px solid #eeeeee;
+	text-align: center;
+	max-width: 310px;
+	padding: 20px;
+	margin: 20px auto 0px;
+	border: 1px solid #dddddd;
 	background-color: #ffffff;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
-	background-color: #f8f8f8;
+	background-color: #fafafa;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.05);
 }
 
 .form-signin-heading {
-	text-align: center;
+	margin-top: 0;
 }
 
 .form-signin-paragraph {
 	margin-bottom: 20px;
-	text-align: center;
 }
 
 .remember-me{
@@ -42,6 +42,7 @@ body{
 	padding-left: 0;
 	margin-bottom: 15px;
 	font-weight: normal;
+	text-align: left;
 }
 
 input[type='checkbox'] {
@@ -60,4 +61,5 @@ input[type='checkbox']:checked + label > i:before{
 input[type='checkbox'] + label > i{
 	text-align: left;
 	width: 1.0em;
+	cursor: pointer;
 }
