--- a/css/default.css
+++ b/css/default.css
@@ -29,7 +29,7 @@ body.page {
 }
 
 #wrapper.page{
-	padding-top: 30px;
+	padding-top: 20px;
 }
 
 #collapse {
@@ -42,7 +42,7 @@ body.page {
 }
 
 #system-status .progress {
-	margin-bottom: 0;
+	/* margin-bottom: 0; */
 }
 
 #system-status .table {
@@ -119,7 +119,6 @@ iframe {
 #sidebar li {
 	list-style: none;
 	position: relative;
-	padding: 10px;
 	border: 1px solid #494949;
 	border-right: 0;
 	border-left: 0;
@@ -137,6 +136,8 @@ iframe {
 
 #sidebar li a{
 	color: #aaaaaa;
+	display: block;
+	padding: 10px;
 }
 
 #sidebar li a:hover{
