--- a/css/default.css
+++ b/css/default.css
@@ -275,3 +275,20 @@ input[type='radio'] + label > i{
 	color: #eee;
 	text-decoration: none;
 }
+.loader {
+	/*display: none;*/
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 60px;
+	height: 60px;
+	margin-left: 90px;
+	margin-top: -30px;
+	color: #333;
+	font-size: 60px;
+}
+@media screen and (max-width:767px) {
+	.loader {
+		margin-left: -30px;
+	}
+}
