--- a/unauthenticated/css/login.css
+++ b/unauthenticated/css/login.css
@@ -1,48 +1,104 @@
-/* ---------- Mozilla BUG ---------- */
+@font-face{
+	font-family: 'Lato Regular';
+	src:url('../fonts/Lato-Regular.eot');
+	src:url('../fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Lato-Regular.woff') format('woff'),
+		url('../fonts/Lato-Regular.ttf') format('truetype'),
+		url('../fonts/Lato-Regular.svg') format('svg');
+	font-style: normal;
+	font-weight: 400;
+}
+@font-face{
+	font-family: 'Lato Light';
+	src:url('../fonts/Lato-Light.eot');
+	src:url('../fonts/Lato-Light.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Lato-Light.woff') format('woff'),
+		url('../fonts/Lato-Light.ttf') format('truetype'),
+		url('../fonts/Lato-Light.svg') format('svg');
+	font-style: normal;
+	font-weight: 300;
+}
 *:focus, *:active{
-	outline:none !important;
+	outline: none !important;
 }
-
 *::-moz-focus-inner{
-	border:0 !important;
+	border: 0 !important;
 }
-/* ---------- Login ---------- */
-
-.btn {
-	width: 46%;
+body {
+	font-family: 'Lato Regular', sans-serif;
+	background-color: #f9f9f9;
 }
-
-.form-signin {
-	text-align: center;
-	max-width: 310px;
-	padding: 20px;
-	margin: 20px auto 0px;
-	border: 1px solid #dddddd;
-	background-color: #ffffff;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
+.login-container {
 	border-radius: 4px;
-	background-color: #fafafa;
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.05);
+	margin-top: 15px;
 }
-
-.form-signin-heading {
+.message-container {
+	margin-top: 15px;
+}
+.alert {
+	margin-bottom: 0px;
+}
+.login-header {
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	background-color: #428BCA;
+	/* background-color: #8daed7; */
+	background-color: #206ecf;
+	text-align: center;
+	color: #fff;
+	border: 1px solid #1b5eb1;
+	border-bottom: 0;
+	padding: 20px;
+}
+.login-header h1 {
+	font-size: 22px;
+	margin-bottom: 5px;
 	margin-top: 0;
 }
-
-.form-signin-paragraph {
+.login-header h2 {
+	font-family: 'Lato Light', sans-serif;
+	font-size: 18px;
+	margin-bottom: 0;
+	margin-top: 5px;
+}
+.login-body {
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	background-color: #fff;
+	padding: 20px;
+	border: 1px solid #DDD;
+	border-top: none;
+}
+.login-body p {
+	text-align: center;
 	margin-bottom: 20px;
 }
-
-.remember-me{
-	color: #555555;
+.btn {
+	padding: 6px 13px;
+	border-radius: 3px;
+	border-width: 0;
+	border-bottom-width: 2px;
+	border-top-color: transparent;
+	border-left-color: transparent;
+	border-right-color: transparent;
 }
-
+.btn:hover, .btn:focus {
+	border-top-color: transparent;
+	border-left-color: transparent;
+	border-right-color: transparent;
+}
+.form-control {
+	box-shadow: none;
+	-webkit-appearance: none;
+}
 .checkbox{
-	padding-left: 0;
-	margin-bottom: 15px;
-	font-weight: normal;
+	margin: 0px;
+	font-size: 14px;
+	line-height: 1.42857;
 	text-align: left;
+	padding: 6px 12px;
+	font-weight: normal;
+	color: #555;
 }
 
 input[type='checkbox'] {
@@ -62,4 +118,11 @@ input[type='checkbox'] + label > i{
 	text-align: left;
 	width: 1.0em;
 	cursor: pointer;
+}
+@media (min-width: 768px) {
+	.col-sm-fix {
+		margin: 0 auto;
+		width: 468px;
+		float: none;
+	}
 }
