--- a/unauthenticated/assets/css/login.css
+++ b/unauthenticated/assets/css/login.css
@@ -18,60 +18,15 @@
 	font-style: normal;
 	font-weight: 300;
 }
-*:focus, *:active{
+*:focus, *:active {
 	outline: none !important;
 }
-*::-moz-focus-inner{
+*::-moz-focus-inner {
 	border: 0 !important;
 }
 body {
 	font-family: 'Lato Regular', sans-serif;
 	background-color: #f9f9f9;
-}
-.login-container {
-	border-radius: 4px;
-	margin-top: 15px;
-}
-.message-container {
-	margin-top: 15px;
-}
-.alert {
-	margin-bottom: 0px;
-}
-.login-header {
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-	background-color: #428BCA;
-	/* background-color: #8daed7; */
-	background-color: #206ecf;
-	text-align: center;
-	color: #fff;
-	border: 1px solid #1b5eb1;
-	border-bottom: 0;
-	padding: 20px;
-}
-.login-header h1 {
-	font-size: 22px;
-	margin-bottom: 5px;
-	margin-top: 0;
-}
-.login-header h2 {
-	font-family: 'Lato Light', sans-serif;
-	font-size: 18px;
-	margin-bottom: 0;
-	margin-top: 5px;
-}
-.login-body {
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
-	background-color: #fff;
-	padding: 20px;
-	border: 1px solid #DDD;
-	border-top: none;
-}
-.login-body p {
-	text-align: center;
-	margin-bottom: 20px;
 }
 .btn {
 	padding: 6px 13px;
@@ -91,33 +46,58 @@ body {
 	box-shadow: none;
 	-webkit-appearance: none;
 }
-.checkbox{
-	margin: 0px;
-	font-size: 14px;
-	line-height: 1.42857;
-	text-align: left;
-	padding: 6px 12px;
-	font-weight: normal;
-	color: #555;
+.message-container {
+	margin-top: 15px;
 }
-
-input[type='checkbox'] {
-	position: absolute;
-	clip: rect(1px, 1px, 1px, 1px);
+.alert {
+	margin-bottom: 0px;
 }
-
-input[type='checkbox'] + label > i:before{
-	content: "\f096";
+.box-container {
+	border-radius: 4px;
+	margin-top: 15px;
 }
-
-input[type='checkbox']:checked + label > i:before{
-	content: "\f046";
+.box-header {
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	text-align: center;
+	color: #fff;
+	border: 1px solid transparent;
+	border-bottom: 0;
+	padding: 20px;
 }
-
-input[type='checkbox'] + label > i{
-	text-align: left;
-	width: 1.0em;
-	cursor: pointer;
+.box-login > .box-header {
+	background-color: #206ecf;
+	border-color:  #1b5eb1;
+}
+.box-banner > .box-header {
+	background-color: #cf1f1f;
+	border-color: #b11b1b;
+}
+.box-header > h1 {
+	font-size: 22px;
+	margin-bottom: 5px;
+	margin-top: 0;
+}
+.box-header > h2 {
+	font-family: 'Lato Light', sans-serif;
+	font-size: 18px;
+	margin-bottom: 0;
+	margin-top: 5px;
+}
+.box-body {
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	background-color: #fff;
+	padding: 20px;
+	border: 1px solid #DDD;
+	border-top: none;
+}
+.box-body > p {
+	text-align: center;
+	margin-bottom: 20px;
+}
+.checkbox {
+	margin: 7px 0px;
 }
 @media (min-width: 768px) {
 	.col-sm-fix {
