--- a/unauthenticated/assets/css/login.css
+++ b/unauthenticated/assets/css/login.css
@@ -1,3 +1,8 @@
+/*###########################################################################################################################
+# BWTheme 0.9.5 (https://github.com/winfuture/Bootstrap3-Webmin-Theme) - (http://theme.winfuture.it)						#
+# Copyright (c) 2015 Riccardo Nobile <riccardo.nobile@winfuture.it> and Simone Cragnolini <simone.cragnolini@winfuture.it>	#
+# Licensed under GPLv3 License (https://github.com/winfuture/Bootstrap3-Webmin-Theme/blob/testing/LICENSE)					#
+###########################################################################################################################*/
 @font-face{
 	font-family: 'Lato Regular';
 	src:url('../fonts/Lato-Regular.eot');
